MLOps_Book_Recommender/k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-recommender-service
spec:
  selector:
    app: book-recommender
  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP
  type: LoadBalancer
